// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropdownMenu > should render with checkbox 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="closed"
    id="radix-_r_8_"
    type="button"
  >
    Trigger
  </button>
</div>
`;

exports[`DropdownMenu > should render with normal items 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="closed"
    id="radix-_r_0_"
    type="button"
  >
    Trigger
  </button>
</div>
`;

exports[`DropdownMenu > should render with radio group 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="closed"
    id="radix-_r_6_"
    type="button"
  >
    Trigger
  </button>
</div>
`;

exports[`DropdownMenu > should render with separator 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="closed"
    id="radix-_r_2_"
    type="button"
  >
    Trigger
  </button>
</div>
`;

exports[`DropdownMenu > should render with subItem 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    data-slot="dropdown-menu-trigger"
    data-state="closed"
    id="radix-_r_4_"
    type="button"
  >
    Trigger
  </button>
</div>
`;
